--- a/assets/css/sportspress.css
+++ b/assets/css/sportspress.css
@@ -34,7 +34,7 @@
 }
 .sp-data-table .data-name .logo {
 	vertical-align: middle;
-	height: 2em;
+	height: 2.5em;
 	width: auto;
 }
 
